--- a/dailyfresh/templates/fail.html
+++ b/dailyfresh/templates/fail.html
@@ -24,7 +24,7 @@
 				<div class="form_input">
 					<h1>{{ fail }}</h1>
                     <br/><hr/>
-                    <h1>恭喜 账号激活成功</h1>
+                    <h1>恭喜 账号激活失败</h1>
 				</div>
 			</div>
 		</div>
